--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1146,7 +1146,7 @@
           "default": {
             "value": {
               "fontFamily": "{config.fontFamily.ui}",
-              "fontWeight": "{config.fontWeight.text}",
+              "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "100%",
               "fontSize": "{config.fontSize.label.text}"
             },
@@ -1155,7 +1155,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.ui}",
-              "fontWeight": "{config.fontWeight.medium}",
+              "fontWeight": "{config.fontWeight.semibold}",
               "lineHeight": "100%",
               "fontSize": "{config.fontSize.label.text}"
             },
