--- a/tokens/config.json
+++ b/tokens/config.json
@@ -62,7 +62,7 @@
     },
     "fontSize": {
       "base": {
-        "value": "1.125rem",
+        "value": "1rem",
         "type": "fontSizes"
       },
       "control": {
@@ -203,7 +203,7 @@
           "type": "dimension"
         },
         "border": {
-          "value": "0.125rem",
+          "value": "2px",
           "type": "dimension"
         }
       },
@@ -229,7 +229,7 @@
           "type": "dimension"
         },
         "border": {
-          "value": "0.0625rem",
+          "value": "1px",
           "type": "dimension"
         }
       }
