--- a/tokens/config.json
+++ b/tokens/config.json
@@ -713,6 +713,10 @@
             "active": {
               "value": "0.4",
               "type": "other"
+            },
+            "light": {
+              "value": "0.08",
+              "type": "other"
             }
           },
           "border": {
