--- a/tokens/config.json
+++ b/tokens/config.json
@@ -740,6 +740,16 @@
             "type": "other"
           }
         }
+      },
+      "disabled": {
+        "alpha": {
+          "bg": {
+            "light": {
+              "value": "0.08",
+              "type": "other"
+            }
+          }
+        }
       }
     }
   }
