color refactor accent / primary for buttons

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -311,7 +311,7 @@
           }
         }
       },
-      "primary": {
+      "accent": {
         "hue": {
           "default": {
             "value": "215",
@@ -738,16 +738,6 @@
           "default": {
             "value": "0.8",
             "type": "other"
-          }
-        }
-      },
-      "disabled": {
-        "alpha": {
-          "bg": {
-            "light": {
-              "value": "0.08",
-              "type": "other"
-            }
           }
         }
       }
