update input focus color

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -902,7 +902,7 @@
           "border": {
             "default": {
               "type": "color",
-              "value": "hsl({config.color.info.hue.default}, {config.color.info.saturation.default}, 70%)"
+              "value": "{app.color.component.info.border.solid}"
             }
           },
           "focusRing": {
