--- a/tokens/config.json
+++ b/tokens/config.json
@@ -488,6 +488,10 @@
           "active": {
             "value": "0.16",
             "type": "other"
+          },
+          "focus": {
+            "value": "0.24",
+            "type": "other"
           }
         },
         "alpha": {
