--- a/tokens/application.json
+++ b/tokens/application.json
@@ -902,13 +902,31 @@
           "border": {
             "default": {
               "type": "color",
-              "value": "{app.color.component.info.border.solid}"
+              "value": "{app.color.component.info.border.solid}",
+              "$extensions": {
+                "studio.tokens": {
+                  "modify": {
+                    "type": "darken",
+                    "value": "{config.color.info.darken.default}",
+                    "space": "hsl"
+                  }
+                }
+              }
             }
           },
           "focusRing": {
             "default": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.translucent}, 75%, {config.color.info.alpha.focusRing.default})"
+              "value": "{app.color.component.info.bg.solid}",
+              "$extensions": {
+                "studio.tokens": {
+                  "modify": {
+                    "type": "alpha",
+                    "value": "{config.color.info.alpha.focusRing.default}",
+                    "space": "hsl"
+                  }
+                }
+              }
             }
           }
         },
