--- a/tokens/application.json
+++ b/tokens/application.json
@@ -880,7 +880,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 80%, {config.color.neutral.alpha.border.subtle})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 80%, {config.color.neutral.alpha.border.default})"
             }
           },
           "fg": {
