--- a/tokens/application.json
+++ b/tokens/application.json
@@ -61,6 +61,10 @@
       },
       "control": {
         "height": {
+          "xxs": {
+            "value": "{app.dimension.control.height.xs} - 0.5rem",
+            "type": "dimension"
+          },
           "xs": {
             "value": "{app.dimension.control.height.sm} - 0.5rem",
             "type": "dimension"
@@ -83,6 +87,10 @@
           }
         },
         "padding": {
+          "xxs": {
+            "value": "{app.dimension.control.padding.xs} - 0.25rem",
+            "type": "dimension"
+          },
           "xs": {
             "value": "{app.dimension.control.padding.sm} - 0.25rem",
             "type": "dimension"
@@ -105,6 +113,10 @@
           }
         },
         "gap": {
+          "xxs": {
+            "value": "{app.dimension.control.gap.xs} - 0.125rem",
+            "type": "dimension"
+          },
           "xs": {
             "value": "{app.dimension.control.gap.sm} - 0.125rem",
             "type": "dimension"
@@ -127,6 +139,10 @@
           }
         },
         "radius": {
+          "xxs": {
+            "value": "{app.dimension.control.radius.xs} - 0.125rem",
+            "type": "dimension"
+          },
           "xs": {
             "value": "{app.dimension.control.radius.sm} - 0.125rem",
             "type": "dimension"
@@ -149,6 +165,10 @@
           }
         },
         "border": {
+          "xxs": {
+            "value": "{config.dimension.control.border}",
+            "type": "dimension"
+          },
           "xs": {
             "value": "{config.dimension.control.border}",
             "type": "dimension"
@@ -171,6 +191,10 @@
           }
         },
         "symbol": {
+          "xxs": {
+            "value": "{app.dimension.control.symbol.xs} - 0.125rem",
+            "type": "dimension"
+          },
           "xs": {
             "value": "{app.dimension.control.symbol.sm} - 0.125rem",
             "type": "dimension"
