--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1893,6 +1893,19 @@
             }
           ],
           "type": "boxShadow"
+        },
+        "dragged": {
+          "value": [
+            {
+              "x": "0",
+              "y": "0.375rem",
+              "blur": "1rem",
+              "spread": "0",
+              "color": "{app.color.component.shadow.default}",
+              "type": "dropShadow"
+            }
+          ],
+          "type": "boxShadow"
         }
       }
     },
