--- a/tokens/config.json
+++ b/tokens/config.json
@@ -121,7 +121,7 @@
           "type": "fontSizes"
         },
         "symbol": {
-          "value": "{config.fontSize.subtitle.text} + 0.125rem",
+          "value": "{config.fontSize.body.text} + 0.125rem",
           "type": "fontSizes"
         }
       },
@@ -131,7 +131,7 @@
           "type": "fontSizes"
         },
         "symbol": {
-          "value": "{config.fontSize.subtitle.text} + 0.125rem",
+          "value": "{config.fontSize.callout.text} + 0.125rem",
           "type": "fontSizes"
         }
       },
