--- a/tokens/config.json
+++ b/tokens/config.json
@@ -107,7 +107,7 @@
       },
       "subtitle": {
         "text": {
-          "value": "{config.fontSize.base} + 0.25rem",
+          "value": "{config.fontSize.base} * 1.5",
           "type": "fontSizes"
         },
         "symbol": {
