--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1925,15 +1925,15 @@
       },
       "title": {
         "1": {
-          "value": "-0.75%",
+          "value": "-0.5%",
           "type": "letterSpacing"
         },
         "2": {
-          "value": "-1.5%",
+          "value": "-1%",
           "type": "letterSpacing"
         },
         "3": {
-          "value": "-2.25%",
+          "value": "-1.5%",
           "type": "letterSpacing"
         },
         "symbol": {
@@ -2072,15 +2072,15 @@
     "lineHeight": {
       "title": {
         "1": {
-          "value": "140%",
-          "type": "lineHeights"
-        },
-        "2": {
           "value": "130%",
           "type": "lineHeights"
         },
-        "3": {
+        "2": {
           "value": "120%",
+          "type": "lineHeights"
+        },
+        "3": {
+          "value": "110%",
           "type": "lineHeights"
         }
       },
@@ -2100,15 +2100,15 @@
       },
       "callout": {
         "1": {
-          "value": "100%",
+          "value": "140%",
           "type": "lineHeights"
         },
         "2": {
-          "value": "100%",
+          "value": "140%",
           "type": "lineHeights"
         },
         "3": {
-          "value": "100%",
+          "value": "140%",
           "type": "lineHeights"
         }
       },
@@ -2145,21 +2145,21 @@
       "title": {
         "text": {
           "default": {
-            "value": "{config.fontWeight.medium}",
+            "value": "{config.fontWeight.semibold}",
             "type": "fontWeights"
           },
           "strong": {
-            "value": "{config.fontWeight.semibold}",
+            "value": "{config.fontWeight.bold}",
             "type": "fontWeights"
           }
         },
         "symbol": {
           "default": {
-            "value": "{config.fontWeight.medium}",
+            "value": "{config.fontWeight.semibold}",
             "type": "fontWeights"
           },
           "strong": {
-            "value": "{config.fontWeight.semibold}",
+            "value": "{config.fontWeight.bold}",
             "type": "fontWeights"
           }
         }
